--- a/PlatypusApp/app/src/main/res/layout/activity_home.xml
+++ b/PlatypusApp/app/src/main/res/layout/activity_home.xml
@@ -4,48 +4,80 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.platypus.platypusapp.Home">
+    tools:context="com.platypus.platypusapp.Home"
+    android:background="@drawable/blue_background">
 
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="253dp"
-        android:layout_height="355dp"
+        android:layout_width="384dp"
+        android:layout_height="158dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:text="Where do we start?"
-        android:textAlignment="textStart"
-        android:textSize="85sp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="32dp"
+        android:fontFamily="sans-serif"
+        android:text="What Should We Do?"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textColor="@color/DarkGreyFont"
+        android:textSize="65sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp" />
 
-    <Button
-        android:id="@+id/button3"
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginRight="8dp"
-        android:onClick="GoToChat"
-        android:text="Chat"
-        android:textAllCaps="false"
-        android:textSize="50sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-
-    <Button
-        android:id="@+id/button4"
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginRight="8dp"
+    <ImageButton
+        android:id="@+id/imageButton2"
+        style="@style/Widget.AppCompat.ImageButton"
+        android:layout_width="122dp"
+        android:layout_height="117dp"
+        android:adjustViewBounds="false"
+        android:backgroundTint="@android:color/transparent"
+        android:cropToPadding="false"
         android:onClick="GoToExplore"
-        android:text="Explore"
-        android:textAllCaps="false"
-        android:textSize="50sp"
-        app:layout_constraintBottom_toTopOf="@+id/button3"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:scaleType="fitXY"
+        android:tint="@color/colorAccent"
+        android:visibility="visible"
+        app:srcCompat="@drawable/ic_magnify"
+        app:layout_constraintBottom_toTopOf="@+id/imageButton3"
+        android:layout_marginBottom="16dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.501" />
+
+    <ImageButton
+        android:id="@+id/imageButton3"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@android:color/transparent"
+        android:onClick="GoToChat"
+        android:scaleType="fitCenter"
+        android:tint="@color/colorAccent"
+        app:srcCompat="@drawable/ic_wechat"
+        app:layout_constraintBottom_toTopOf="@+id/imageButton4"
+        android:layout_marginBottom="16dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <ImageButton
+        android:id="@+id/imageButton4"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@android:color/transparent"
+        android:scaleType="fitCenter"
+        android:tint="?attr/colorAccent"
+        app:srcCompat="@drawable/ic_gamepad_variant"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="76dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
 
