--- a/PlatypusApp/app/src/main/res/layout/activity_response.xml
+++ b/PlatypusApp/app/src/main/res/layout/activity_response.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/red_background"
     tools:context="com.platypus.platypusapp.response">
 
     <TextView
