--- a/PlatypusApp/app/src/main/res/layout/activity_welcome.xml
+++ b/PlatypusApp/app/src/main/res/layout/activity_welcome.xml
@@ -4,56 +4,63 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/green_gradient_background"
     tools:context="com.platypus.platypusapp.Welcome">
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="244dp"
-        android:layout_height="423dp"
+        android:layout_width="347dp"
+        android:layout_height="201dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="32dp"
         android:text="Hello, have we met?"
-        android:textSize="80sp"
+        android:textAlignment="center"
+        android:textColor="@color/DarkGreyFont"
+        android:textSize="65sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_bias="0.511" />
 
     <Button
         android:id="@+id/button"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginRight="8dp"
         android:onClick="GoToHome"
-        android:shadowColor="@android:color/background_light"
-        android:shadowDx="10"
-        android:shadowDy="0"
-        android:shadowRadius="1"
         android:text="Yes!"
         android:textAllCaps="false"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="@android:color/black"
+        android:textColor="@color/DarkGreyFont"
         android:textSize="50sp"
-        android:textStyle="italic"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/button2"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintVertical_bias="0.869" />
 
     <Button
         android:id="@+id/button2"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="6dp"
         android:onClick="GoToLogin"
-        android:shadowColor="@android:color/white"
-        android:shadowDx="10"
-        android:shadowRadius="1"
         android:text="What?"
         android:textAppearance="@style/TextAppearance.AppCompat"
-        android:textColor="@android:color/black"
+        android:textColor="@color/DarkGreyFont"
         android:textSize="50sp"
+        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp" />
+        android:layout_marginBottom="139dp" />
 
 </android.support.constraint.ConstraintLayout>
